--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -105,7 +105,7 @@
 
 .checkout .back-header {
     font-size: 29px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .checkout .back-header + p {
@@ -207,8 +207,8 @@
 .checkout .rating-text {
     float: left;
     margin: 0;
-    line-height: 43px;
-    font-size: 25px;
+    line-height: 38px;
+    font-size: 20px;
     margin-top: 0 !important;
     width: 320px;
 }
@@ -217,7 +217,8 @@
     font-weight: 300;
     color: #c04c9c;
     margin: 7px 0 0;
-    font-size: 22px;
+    font-size: 20px;
+    max-width: 450px;
 }
 
 .checkout .rating .stars span {
