--- a/src/components/Public/CustomerCare/styles.css
+++ b/src/components/Public/CustomerCare/styles.css
@@ -14,7 +14,7 @@
 }
 
 .contact .wrapper {
-    padding: 20px 80px;
+    padding: 10px 80px 40px;
     max-width: 700px;
     width: 70%;
     margin: 0 auto;
@@ -38,11 +38,11 @@
 
 .contact .email,
 .contact .skype {
-    //color: #C04C9C;
+    color: #C04C9C;
 }
 
 .contact .text {
-    font-size: 17px;
+    font-size: 16px;
     line-height: 26px;
 }
 
