--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -1,5 +1,4 @@
 .footer {
-    height: 230px;
     background-color: #c04c9c;
     padding: 40px 80px;
     color: #fff;
@@ -12,14 +11,14 @@
 
 .footer .col-1 {
     width: 350px;
-    margin-right: 12%;
+    margin-right: 9%;
     display: inline-block;
     vertical-align: top;
 }
 
 .footer .col-2 {
     width: 240px;
-    margin-right: 14%;
+    margin-right: 9%;
     display: inline-block;
     vertical-align: top;
 }
@@ -34,16 +33,28 @@
 .footer .col-1 p {
     margin-bottom: 0;
     margin-top: 5px;
+    font-weight: 300;
 }
 
 .footer .col-2 p,
 .footer .col-3 p {
     margin-bottom: 12px;
     margin-top: 5px;
+    font-weight: 300;
+}
+
+.footer .col h2 {
+    margin-bottom: 6px;
+    color: #fff !important;
+    margin-top: 25px;
+    font-size: 19px;
+    font-weight: normal;
 }
 
 .footer .col h3 {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    color: #fff !important;
+    margin-top: 25px;
 }
 
 .footer .col {
@@ -51,30 +62,31 @@
 }
 
 .footer .col-1:after {
-    content: '';
+    //content: '';
     position: absolute;
     top: 30px;
     right: -15%;
-    height: 170px;
+    height: 350px;
     width: 2px;
     border-right: 1px solid #fff;
 }
 
 .footer .col-2:after {
-    content: '';
+    //content: '';
     position: absolute;
     top: 30px;
     right: -31%;
-    height: 170px;
+    height: 350px;
     width: 2px;
     border-right: 1px solid #fff;
 }
 
 .footer .link {
     color: #fff;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
     font-size: 16px;
     display: block;
+    font-weight: 300;
 }
 
 @media only screen and (max-width: 500px) {
