--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,7 +1,15 @@
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     background: #ddd;
     margin: 0;
+}
+
+h1 {
+    font-weight: 500;
+}
+
+h2, h3, h4, h5 {
+    font-weight: 500;
 }
 
 @media only screen and (max-width: 500px) {
