--- a/src/components/Public/CustomerCare/styles.css
+++ b/src/components/Public/CustomerCare/styles.css
@@ -15,9 +15,12 @@
 
 .contact .wrapper {
     padding: 10px 80px 40px;
-    max-width: 700px;
-    width: 70%;
+    max-width: 930px;
     margin: 0 auto;
+}
+
+.contact .contact-text {
+    margin-top: 5px;
 }
 
 .contact .phone-header,
