--- a/src/components/Public/PrivacyPolicy/styles.css
+++ b/src/components/Public/PrivacyPolicy/styles.css
@@ -16,6 +16,8 @@
 .privacy-policy h3 {
     margin: 0;
     color: #C04C9C;
+    font-size: 20px;
+    font-weight: 500;
 }
 
 .privacy-policy p {
@@ -24,8 +26,8 @@
 }
 
 .privacy-policy .privacy-wrapper {
-    padding: 20px 65px;
-    max-width: 800px;
+    padding: 20px 0;
+    max-width: 930px;
     margin: 0 auto;
 }
 
@@ -46,6 +48,29 @@
 
 .privacy-policy p.address {
     margin-bottom: 5px;
+}
+
+@media only screen and (max-width: 950px) {
+    .privacy-policy .privacy-wrapper {
+        padding: 20px 45px;
+        max-width: none;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .privacy-policy .privacy-wrapper {
+        padding: 20px 40px;
+        max-width: none;
+        margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .privacy-policy .privacy-wrapper {
+        max-width: 850px;
+        margin: 0 auto;
+    }
 }
 
 @media only screen and (max-width: 500px) {
