--- a/src/components/Public/Quote/styles.css
+++ b/src/components/Public/Quote/styles.css
@@ -1,6 +1,6 @@
 .quote p {
     font-size: 60px;
-    font-weight: 800;
+    font-weight: 500;
     color: #C04C9C;
     text-align: center;
 }
@@ -14,14 +14,14 @@
     }
 
     .quote p {
-        fposition: static;
+        position: static;
         text-align: center;
         margin: 0;
         color: #C04C9C;
         font-size: 33px;
         line-height: 36px;
         text-shadow: none;
-        font-weight: 800;
+        font-weight: 500;
     }
 
     .quote img {
