--- a/src/components/Public/Quote/styles.css
+++ b/src/components/Public/Quote/styles.css
@@ -1,3 +1,26 @@
+.quote {
+    padding: 20px;
+    height: 188px;
+}
+
+.quote p:first-child {
+    margin-bottom: 10px;
+    margin-top: 8px;
+}
+
+.quote p:nth-child(2) {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.quote span:nth-child(3) {
+    float: right;
+    margin-right: 135px;
+    margin-top: 7px;
+    color: #C04C9C;
+    display: block;
+}
+
 .quote p {
     font-size: 60px;
     font-weight: 500;
