--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -60,6 +60,11 @@
     margin: 20px 0 10px 4px;
 }
 
+.checkout .checkout-link {
+    color: #c04c9c;
+    text-decoration: underline;
+}
+
 .checkout .basket .back > div {
     margin: 60px auto;
     width: 520px;
