--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -104,9 +104,37 @@
     font-weight: 300;
 }
 
+@media only screen and (max-width: 1100px) {
+    .footer {
+        padding: 10px 40px;
+    }
+    
+    .footer .col-1 {
+        margin-right: 6%
+    }
+
+    .footer .col-2 {
+        margin-right: 6%;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .footer .col {
+        width: 100%;
+    }
+}
+
 @media only screen and (max-width: 500px) {
     .footer {
-        padding: 20px 40px;
+        padding: 40px;
+        height: auto;
+    }
+
+    .footer .address {
+        position: static;
+        width: auto;
+        margin-top: 25px;
+        margin-bottom: 30px;
         height: auto;
     }
 
@@ -120,7 +148,7 @@
     }
 
     .col-2 {
-        margin: 0 0 7px 0;
+        margin: 0 0 30px 0;
     }
 
     .col-1:after {
@@ -129,25 +157,5 @@
 
     .col-2:after {
         display: none;
-    }
-}
-
-@media only screen and (max-width: 950px) {
-    .footer .col {
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 1100px) {
-    .footer {
-        padding: 10px 40px;
-    }
-    
-    .footer .col-1 {
-        margin-right: 6%
-    }
-
-    .footer .col-2 {
-        margin-right: 6%;
     }
 }
