--- a/src/components/Public/HowItWorks/styles.css
+++ b/src/components/Public/HowItWorks/styles.css
@@ -106,7 +106,7 @@
 
 @media only screen and (max-width: 500px) {
     .how-it-works {
-        padding: 20px 40px 0 40px;
+        padding: 20px 40px 26px 40px;
     }
 
     .how-it-works .heading {
