--- a/src/components/Public/Staff/styles.css
+++ b/src/components/Public/Staff/styles.css
@@ -229,11 +229,9 @@
     }
 
     .staff .preamble {
-        text-align: left;
-    }
-
-    .staff .preamble {
         width:100%;
+        margin-bottom: 25px;
+        text-align: left;
     }
 
     .staff .card:first-child {
@@ -257,5 +255,14 @@
 
     .staff .photo-info-wrapper {
         display: none;
+    }
+
+    .staff .card .info-wrapper {
+        width: auto;
+        padding-bottom: 8px;
+    }
+
+    .staff .card .title-wrapper p:last-child {
+        margin-bottom: 0;
     }
 }
