--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -67,7 +67,7 @@
 
 .checkout .basket .back > div {
     margin: 60px auto;
-    width: 520px;
+    width: 575px;
 }
 
 .checkout .card-error {
@@ -247,7 +247,7 @@
     margin-bottom: 10px;
 }
 
-.checkout .back-header + p {
+.checkout .back-header ~ p {
     margin-bottom: 37px !important;
     color: #333 !important;
 }
@@ -360,7 +360,7 @@
     line-height: 38px;
     font-size: 20px;
     margin-top: 0 !important;
-    width: 320px;
+    width: 375px;
     color: #333;
     font-weight: 300;
 }
@@ -791,6 +791,27 @@ thead tr {
     80%,
     90% {
         stroke: #c04c9c;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .checkout .left-col-wrapper {
+        float: none;
+        margin: 0 auto;
+        width: 550px;
+    }
+
+    table {
+        margin-left: 0;
+        width: 550px;
+    }
+
+    .checkout .basket .front {
+        float: none;
+        margin-top: 32px;
+        margin-left: 0;
+        margin: 40px auto;
+        width: 550px;
     }
 }
 
