--- a/src/components/Public/CustomerCare/styles.css
+++ b/src/components/Public/CustomerCare/styles.css
@@ -66,6 +66,14 @@
     }
 
     .contact .wrapper {
-        padding: 0;
+        width: 100%;
+        max-width: 100%;
+        padding: 0 40px;
+        box-sizing: border-box;
+        margin-bottom: 30px;
+    }
+
+    .push {
+        height: 0 !important;
     }
 }
