--- a/src/components/Public/Faq/styles.css
+++ b/src/components/Public/Faq/styles.css
@@ -1,3 +1,9 @@
 .emphazised {
     color: #C04C9C !important;
 }
+
+@media only screen and (max-width: 500px) {
+    .faq-wrapper {
+        margin-top: 20px !important;
+    }
+}
