skype length btn, menu, paypal btn, iphone 5

--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -808,6 +808,10 @@ thead tr {
         padding-top: 230px;
     }
 
+    .checkout .form-buttons button:first-child + div {
+        width: 100%;
+    }
+
     .checkout .back > div {
         width: 100% !important;
         padding: 0 37px;
