--- a/src/components/Public/Blog/styles.css
+++ b/src/components/Public/Blog/styles.css
@@ -75,3 +75,9 @@
         line-height: 22px;
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .blog .blog-list {
+        padding: 0 20px;
+    }
+}
