--- a/src/components/Public/CustomerCare/styles.css
+++ b/src/components/Public/CustomerCare/styles.css
@@ -77,3 +77,9 @@
         height: 0 !important;
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .contact .wrapper {
+        padding: 0 20px;
+    }
+}
