--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -152,10 +152,16 @@
     .col-2:after {
         display: none;
     }
+}
 
-    @media only screen and (max-width: 950px) {
-        .footer .col {
-            width: 100%;
-        }
+@media only screen and (max-width: 950px) {
+    .footer .col {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .footer {
+        padding: 20px 20px 26px 20px;
     }
 }
