--- a/src/components/Public/HowItWorks/styles.css
+++ b/src/components/Public/HowItWorks/styles.css
@@ -138,3 +138,9 @@
         margin-bottom: 15px;
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .how-it-works {
+        padding: 20px 20px 26px 20px;
+    }
+}
