--- a/src/components/Public/Intro/styles.css
+++ b/src/components/Public/Intro/styles.css
@@ -123,3 +123,9 @@
         margin-top: 20px;
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .introduction .text-wrapper {
+        padding: 30px 20px 33px 20px;
+    }
+}
