--- a/src/components/Public/PrivacyPolicy/styles.css
+++ b/src/components/Public/PrivacyPolicy/styles.css
@@ -113,3 +113,15 @@
         line-height: 22px;
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .privacy-policy .privacy-wrapper {
+        padding: 0 20px;
+    }
+
+    .page-header h1 {
+        color: #C04C9C !important;
+        text-align: left !important;
+        margin-left: 20px !important;
+    }
+}
