--- a/src/components/Public/Staff/styles.css
+++ b/src/components/Public/Staff/styles.css
@@ -266,3 +266,9 @@
         margin-bottom: 0;
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .staff {
+        padding: 5px 20px 20px;
+    }
+}
