--- a/src/components/Public/CustomerCare/styles.css
+++ b/src/components/Public/CustomerCare/styles.css
@@ -50,6 +50,11 @@
     padding-left: 20px;
 }
 
+.contact a {
+    color: #333;
+    text-decoration: underline;
+}
+
 @media only screen and (max-width: 500px) {
     .contact .page-header {
         background-color: #fff;
