--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -104,6 +104,10 @@
     font-weight: 300;
 }
 
+.footer a {
+    text-decoration: none !important;
+}
+
 @media only screen and (max-width: 1100px) {
     .footer {
         padding: 10px 40px;
