--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -5,10 +5,14 @@ body {
 }
 
 h1 {
-    font-weight: 500;
+    font-weight: 400;
 }
 
-h2, h3, h4, h5 {
+h2, h3 {
+    font-weight: 400;
+}
+
+h4 {
     font-weight: 500;
 }
 
