--- a/src/components/Public/Footer/styles.css
+++ b/src/components/Public/Footer/styles.css
@@ -1,9 +1,9 @@
 .footer {
     background-color: #c04c9c;
-    padding: 40px 80px;
+    padding: 40px 80px 0;
     color: #fff;
     text-align: center;
-    height: 310px;
+    height: 295px;
 }
 
 .footer > div * {
@@ -22,8 +22,8 @@
 }
 
 .footer .col-1 {
-    width: 381px;
-    margin-right: 9%;
+    width: 455px;
+    margin-right: 7%;
     display: inline-block;
     vertical-align: top;
 }
