--- a/src/components/Public/Header/styles.css
+++ b/src/components/Public/Header/styles.css
@@ -106,7 +106,7 @@
         text-align: center;
         padding-top: 20px;
         padding-left: 0;
-        height: 227px;
+        min-height: 227px;
     }
 
     .admin-header {
