--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -47,7 +47,7 @@
 }
 
 .error.checkbox {
-    margin-left: 22px;
+    margin-left: 31px !important;
 }
 
 .checkout .faktura-info p {
@@ -152,7 +152,7 @@
 }
 
 .checkout .payment-type-wrapper.faktura-wrapper {
-    margin-top: 7px;
+    margin-top: 9px;
 }
 
 .checkout .payment-type-wrapper.faktura-wrapper label {
@@ -781,6 +781,106 @@ thead tr {
     }
 }
 
+.checkout .payment-type-wrapper input[type="radio"],
+.checkout .basket input[type="checkbox"] {
+    display: none;
+}
+.checkout .payment-type-wrapper input[type="radio"] + label {
+    position: relative;
+    display: inline-block;
+    padding-left: 0;
+    margin-right: 2em;
+    cursor: pointer;
+    line-height: 1em;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.checkout .basket input[type="checkbox"] + label {
+    position: relative;
+    display: inline-block;
+    padding-left: 27px;
+    margin-right: 2em;
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    margin-bottom: 0;
+    line-height: 25px;
+}
+.checkout .basket input[type="checkbox"] + label:before,
+.checkout .basket input[type="checkbox"] + label:after {
+    content: '';
+    position: absolute;
+    top: 1px;
+    left: 0;
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    color: white;
+    font-family: Times;
+    border-radius: 50%;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    line-height: initial;
+}
+
+.checkout .payment-type-wrapper input[type="radio"] + label:before,
+.checkout .payment-type-wrapper input[type="radio"] + label:after {
+    content: '';
+    position: absolute;
+    top: 7px;
+    right: -19px;
+    width: 1em;
+    height: 1em;
+    text-align: center;
+    color: #fff;
+    font-family: Times;
+    border-radius: 50%;
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    line-height: initial;
+    border: 2px solid #c04c9c;
+}
+
+.checkout .payment-type-wrapper input[type="radio"] + label:before {
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    -webkit-box-shadow: inset 0 0 0 0.2em white, inset 0 0 0 1em white;
+    box-shadow: inset 0 0 0 0.2em white, inset 0 0 0 1em white;
+}
+.checkout .payment-type-wrapper input[type="radio"] + label:hover:before {
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    -webkit-box-shadow: inset 0 0 0 0.3em white, inset 0 0 0 1em #c04c9c;;
+    box-shadow: inset 0 0 0 0.3em white, inset 0 0 0 1em #c04c9c;;
+}
+.checkout .payment-type-wrapper input[type="radio"]:checked + label:before {
+    -webkit-transition: all .3s ease;
+    transition: all .3s ease;
+    -webkit-box-shadow: inset 0 0 0 0.2em white, inset 0 0 0 1em #c04c9c;
+    box-shadow: inset 0 0 0 0.2em white, inset 0 0 0 1em #c04c9c;
+}
+.checkout .basket input[type="checkbox"] + label:before {
+    content: '✗';
+    border-radius: 4px;
+    //background-color: #c04c9c;
+    color: white;
+    border: 2px solid #c04c9c;
+}
+.checkout .basket input[type="checkbox"] + label:hover:before {
+    color: #c04c9c;
+}
+.checkout .basket input[type="checkbox"]:checked + label:before {
+    background-color: #c04c9c;
+    color: white;
+}
+
+.checkout .payment-type-wrapper.faktura-wrapper label:after,
+.checkout .payment-type-wrapper.faktura-wrapper label:before {
+    right: -27px !important;
+    top: -3px !important;
+}
+
 @media only screen and (max-width: 1100px) {
     .checkout .left-col-wrapper {
         float: none;
@@ -1007,5 +1107,63 @@ thead tr {
 
     .checkout .city-wrapper div:last-child {
         width: 55%;
+    }
+
+
+    .checkout .basket input[type="checkbox"]:checked + label:before {
+        content: '✗';
+        background-color: #c04c9c;
+        color: #fff;
+        width: 22px;
+        height: 22px;
+        font-size: 21px;
+        line-height: 22px;
+        margin-top: 2px;
+    }
+
+    .checkout .basket input[type="checkbox"] + label:before, .checkout .basket input[type="checkbox"] + label:after {
+        content: '';
+        position: absolute;
+        width: 22px;
+        height: 22px;
+        font-size: 21px;
+        line-height: 22px;
+        margin-top: 2px;
+    }
+
+    .checkout .basket input[type="checkbox"] + label {
+        position: relative;
+        display: inline-block;
+        padding-left: 33px;
+        margin-right: 2em;
+        cursor: pointer;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        margin-bottom: 0;
+        line-height: 25px;
+    }
+
+    .checkout .payment-type-wrapper input[type="radio"] + label:before, .checkout .payment-type-wrapper input[type="radio"] + label:after {
+        content: '';
+        position: absolute;
+        top: 3px;
+        right: -26px;
+        width: 1em;
+        height: 1em;
+        text-align: center;
+        color: #fff;
+        font-family: Times;
+        border-radius: 50%;
+        -webkit-transition: all .3s ease;
+        transition: all .3s ease;
+        line-height: initial;
+        width: 22px;
+        border: 2px solid #c04c9c;
+        height: 22px;
+    }
+
+    .checkout .payment-type-wrapper.faktura-wrapper label:after, .checkout .payment-type-wrapper.faktura-wrapper label:before {
+        right: -33px !important;
+        top: -7px !important;
     }
 }
